Data tip changed and Z-Index fixed

--- a/src/app/base/components/sidebar-pm/sidebar-pm.component.scss
+++ b/src/app/base/components/sidebar-pm/sidebar-pm.component.scss
@@ -39,3 +39,7 @@ ol.list-letters {
     min-width: 400px;
   }
 }
+
+.tooltip {
+  z-index:150;
+}
